--- a/recordit/templates/admin/manage_course.html
+++ b/recordit/templates/admin/manage_course.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'admin/base.html' %}
 {% from 'bootstrap/form.html' import render_form %}
 {% from 'macros/macros.html' import render_breadcrumb_item %}
 {% from 'macros/pagination.html' import render_pagination %}
@@ -7,83 +7,66 @@
 {% block title %}Manage Course{% endblock %}
 
 
-{% block breadcrumb %}
-<div class="breadcrumb-area" data-bgimage="{{ url_for('static', filename='images/bg/breadcrumb-bg.jpg') }}"
-    data-black-overlay="4">
-    <div class="container">
-        <div class="in-breadcrumb">
-            <div class="row">
-                <div class="col">
-                    <h3>{{ _('Manage Course') }}</h3>
-                    <ul class="breadcrumb-list">
-                        {{ render_breadcrumb_item(endpoint='front.index', name='Home') }}
-                        {{ render_breadcrumb_item(endpoint='admin.index', name='Dashboard') }}
-                        <li class="breadcrumb-item active">Manage Course</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-{% endblock breadcrumb %}
+{% block breadcrumb_title %}
+    <h3>{{ _('Manage Course') }}</h3>
+{% endblock breadcrumb_title %}
 
 
-{% block content %}
-<div class="section-ptb">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="courses-details-tab-panel">
-                    {% if pagination.items %}
-                    <table class="table table-striped table-hover table-sm">
-                        <thead>
-                            <tr class="text-center">
-                                <th>#</th>
-                                <th>{{ _('Name') }}</th>
-                                <th>{{ _('Teacher') }}</th>
-                                <th>{{ _('Teacher Number') }}</th>
-                                <th>{{ _('Grade') }}</th>
-                                <th>{{ _('Date') }}</th>
-                                <th>{{ _('Active') }}</th>
-                                <th>{{ _('Remark') }}</th>
-                                <th>{{ _('Actions') }}</th>
-                            </tr>
-                        </thead>
-                        {% for course in pagination.items %}
-                        <tr class="text-center">
-                            <td class="text-center">
-                                {% set page = request.args.get('page', 1) %}
-                                {{ pagination.total - (config['MANAGE_COURSE_PER_PAGE'] * (page|int - 1) + loop.index) + 1 }}
-                            </td>
-                            <td>{{ course.name }}</td>
-                            <td>{{ course.teacher_name }}</td>
-                            <td>{{ course.teacher_number }}</td>
-                            <td>{{ course.grade }}</td>
-                            <td>{{ course.date }}</td>
-                            <td>{{ course.is_active }}</td>
-                            <td>{{ course.remark|truncate(config['TABLE_MAX_WORDS']) }}</td>
-                            <td>
-                                <div class="button-block">
-                                    <a href="{{ url_for('admin.manage_report', course_id=course.id) }}" class="btn">
-                                        {{ _('Manage Report') }}
-                                    </a>
-                                    <a href="{{ url_for('admin.add_report', course_id=course.id) }}" class="btn">
-                                        {{ _('Add Report') }}
-                                    </a>
-                                </div>
-                            </td>
-                        </tr>
-                        {% endfor %}
-                    </table>
-                    {{ render_pagination(pagination, align='center') }}
-                    {% else %}
-                    <div class="tip">
-                        <h5><i class="fas fa-ban"></i> No Courses.</h5>
-                    </div>
-                    {% endif %}
-                </div>
-            </div>
+{% block breadcrumb_item_list %}
+    {{ render_breadcrumb_item(endpoint='admin.index', name='Dashboard') }}
+    <li class="breadcrumb-item active">Manage Course</li>
+{% endblock breadcrumb_item_list %}
+
+
+{% block dashboard_content %}
+    {% if pagination.items %}
+        <table class="table table-striped table-hover table-sm">
+            <thead>
+            <tr class="text-center">
+                <th>#</th>
+                <th>{{ _('Name') }}</th>
+                <th>{{ _('Teacher') }}</th>
+                <th>{{ _('Teacher Number') }}</th>
+                <th>{{ _('Grade') }}</th>
+                <th>{{ _('Date') }}</th>
+                <th>{{ _('Active') }}</th>
+                <th>{{ _('Remark') }}</th>
+                <th>{{ _('Actions') }}</th>
+            </tr>
+            </thead>
+            {% for course in pagination.items %}
+                <tr class="text-center">
+                    <td class="text-center">
+                        {% set page = request.args.get('page', 1) %}
+                        {{ pagination.total - (config['MANAGE_COURSE_PER_PAGE'] * (page|int - 1) + loop.index) + 1 }}
+                    </td>
+                    <td>{{ course.name }}</td>
+                    <td>{{ course.teacher_name }}</td>
+                    <td>{{ course.teacher_number }}</td>
+                    <td>{{ course.grade }}</td>
+                    <td>{{ course.date }}</td>
+                    <td>{{ course.is_active }}</td>
+                    <td>{{ course.remark|truncate(config['TABLE_MAX_WORDS']) }}</td>
+                    <td>
+                        <div class="button-block">
+                            <a href="{{ url_for('admin.manage_report', course_id=course.id) }}"
+                               class="btn">
+                                {{ _('Manage Report') }}
+                            </a>
+                            <a href="{{ url_for('admin.add_report', course_id=course.id) }}"
+                               class="btn">
+                                {{ _('Add Report') }}
+                            </a>
+                        </div>
+                    </td>
+                </tr>
+            {% endfor %}
+        </table>
+        {{ render_pagination(pagination, align='center') }}
+    {% else %}
+        <div class="tip">
+            <h5><i class="fas fa-ban"></i> No Courses.</h5>
         </div>
-    </div>
-</div>
-{% endblock content %}
+    {% endif %}
+{% endblock dashboard_content %}
+
