--- a/recordit/templates/errors.html
+++ b/recordit/templates/errors.html
@@ -4,43 +4,41 @@
 {% block title %}Error {{ code }}{% endblock %}
 
 {% block breadcrumb %}
-<div class="breadcrumb-area" data-bgimage="{{ url_for('static', filename='images/bg/breadcrumb-bg.jpg') }}"
-    data-black-overlay="4">
-    <div class="container">
-        <div class="in-breadcrumb">
-            <div class="row">
-                <div class="col">
-                    <h3>Error {{ code }}</h3>
-                    <ul class="breadcrumb-list">
-                        {{ render_breadcrumb_item(endpoint='front.index', name='Home') }}
-                        <li class="breadcrumb-item active">
-                            Error {{ code }}
-                        </li>
-                    </ul>
+    <div class="breadcrumb-area" data-bgimage="{{ url_for('static', filename='images/bg/breadcrumb-bg.jpg') }}"
+         data-black-overlay="4">
+        <div class="container">
+            <div class="in-breadcrumb">
+                <div class="row">
+                    <div class="col">
+                        <h3>Error {{ code }}</h3>
+                        <ul class="breadcrumb-list">
+                            {{ render_breadcrumb_item(endpoint='front.index', name='Home') }}
+                            <li class="breadcrumb-item active">Error {{ code }}</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 {% endblock breadcrumb %}
 
 {% block content %}
-<main class="page-content section-ptb">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 ml-auto mr-auto text-center">
-                <div class="search-error-wrapper">
-                    <h1>{{ code }}</h1>
-                    <h4>{{ info }}</h4>
-                    <p>
-                        {{ _('Sorry,<br /> the page you are looking for does not exist,<br /> have been removed, name changed or is temporarity unavailable.') }}
-                    </p>
-                    <a href="{{ url_for('front.index') }}" class="home-bacck-button">
-                        {{ _('Back to home page') }}
-                    </a>
+    <main class="page-content section-ptb">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 ml-auto mr-auto text-center">
+                    <div class="search-error-wrapper">
+                        <h1>{{ code }}</h1>
+                        <h4>{{ info }}</h4>
+                        <p>
+                            {{ _('Sorry,<br /> the page you are looking for does not exist,<br /> have been removed, name changed or is temporarity unavailable.') }}
+                        </p>
+                        <a href="{{ url_for('front.index') }}" class="home-bacck-button">
+                            {{ _('Back to home page') }}
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</main>
+    </main>
 {% endblock content %}
