--- a/recordit/templates/front/about.html
+++ b/recordit/templates/front/about.html
@@ -7,72 +7,68 @@
 
 
 {% block breadcrumb %}
-<div class="breadcrumb-area" data-bgimage="{{ url_for('static', filename='images/bg/breadcrumb-bg.jpg') }}"
-    data-black-overlay="4">
-    <div class="container">
-        <div class="in-breadcrumb">
-            <div class="row">
-                <div class="col">
-                    <h3>About Us</h3>
-                    <ul class="breadcrumb-list">
-                        {{ render_breadcrumb_item(endpoint='front.index', name='Home') }}
-                        <li class="breadcrumb-item active">
-                            About Us
-                        </li>
-                    </ul>
+    <div class="breadcrumb-area" data-bgimage="{{ url_for('static', filename='images/bg/breadcrumb-bg.jpg') }}"
+         data-black-overlay="4">
+        <div class="container">
+            <div class="in-breadcrumb">
+                <div class="row">
+                    <div class="col">
+                        <h3>{{ _('About Us') }}</h3>
+                        <ul class="breadcrumb-list">
+                            {{ render_breadcrumb_item(endpoint='front.index', name='Home') }}
+                            <li class="breadcrumb-item active">About Us</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 {% endblock breadcrumb %}
 
 
 {% block content %}
-<div class="page-content">
-    <div class="about-us-area section-ptb">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-6">
-                    <div class="about-us-contents">
-                        <h3>Just to <span>Record it</span></h3>
-                        <p>{{ lipsum(1) }}</p>
+    <div class="page-content">
+        <div class="about-us-area section-ptb">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-6">
+                        <div class="about-us-contents">
+                            <h3>Just to <span>Record it</span></h3>
+                            <p>{{ lipsum(1) }}</p>
+                        </div>
                     </div>
-                </div>
-                <div class="col-lg-5 ">
-                    <div class="about-us-image text-right">
-                        <img src="{{ url_for('static', filename='images/about.jpg') }}" alt="">
+                    <div class="col-lg-6 ">
+                        <div class="about-us-image text-right">
+                            <img src="{{ url_for('static', filename='images/about.jpg') }}" alt="aboutImage">
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <div class="project-count-area section-ptb-160 project-count-bg">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8  ml-auto mr-auto">
-                    <div class="section-title">
-                        <h4>about us</h4>
-                        <h3 class="text-white">
-                            {{ _('SOME IMPORTANT FACTS') }}
-                        </h3>
+        <div class="project-count-area section-ptb-160 project-count-bg">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8  ml-auto mr-auto">
+                        <div class="section-title">
+                            <h4>about us</h4>
+                            <h3 class="text-white">
+                                {{ _('SOME IMPORTANT FACTS') }}
+                            </h3>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="project-count-inner">
-                <div class="row">
-                    <div class="col-lg-10 ml-auto mr-auto">
-                        <div class="row">
-                            {{ render_counter('Teachers', 50) }}
-                            {{ render_counter('Students', 50) }}
-                            {{ render_counter('Courses', 50) }}
-                            {{ render_counter('Reports', 50) }}
+                <div class="project-count-inner">
+                    <div class="row">
+                        <div class="col-lg-10 ml-auto mr-auto">
+                            {{ render_counter('Teachers', teacher_count|defalut(3)) }}
+                            {{ render_counter('Students', student_count|defalut(50)) }}
+                            {{ render_counter('Courses', course_count|defalut(10)) }}
+                            {{ render_counter('Reports', report_count|defalut(100)) }}
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 {% endblock content %}
