--- a/recordit/templates/user/index.html
+++ b/recordit/templates/user/index.html
@@ -5,26 +5,26 @@
 
 
 {% block breadcrumb %}
-<div class="breadcrumb-area" data-bgimage="{{ url_for('static', filename='images/bg/breadcrumb-bg.jpg') }}"
-    data-black-overlay="4">
-    <div class="container">
-        <div class="in-breadcrumb">
-            <div class="row">
-                <div class="col">
-                    <h3>Home</h3>
-                    <ul class="breadcrumb-list">
-                        {{ render_breadcrumb_item(endpoint='front.index', name='Home') }}
-                    </ul>
+    <div class="breadcrumb-area" data-bgimage="{{ url_for('static', filename='images/bg/breadcrumb-bg.jpg') }}"
+         data-black-overlay="4">
+        <div class="container">
+            <div class="in-breadcrumb">
+                <div class="row">
+                    <div class="col">
+                        <h3>Home</h3>
+                        <ul class="breadcrumb-list">
+                            {{ render_breadcrumb_item(endpoint='front.index', name='Home') }}
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 {% endblock breadcrumb %}
 
 
 {% block content %}
-<div class="tip text-center">
-    1
-</div>
+    <div class="tip text-center">
+        {{ lipsum(1) }}
+    </div>
 {% endblock content %}
